--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Projeto login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -16,7 +17,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons md-18">person</span>
+                        <input type="email" name="login" id="ilogin" required placeholder="Seu e-mail" autocomplete="email">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">&#xe0da;</span>
+                        <input type="password" name="senha" id="isenha" required min="5" placeholder="Sua senha">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                </form>
             </div>
         </section>
     </main>
