update projeto login

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <div class="campo">
                         <span class="material-icons md-18">person</span>
                         <input type="email" name="login" id="ilogin" required placeholder="Seu e-mail" autocomplete="email">
-                        <label for="ilogin">Login</label>
+                        <label for="ilogin"></label>
                     </div>
                     <div class="campo">
                         <span class="material-icons">&#xe0da;</span>
                         <input type="password" name="senha" id="isenha" required min="5" placeholder="Sua senha">
-                        <label for="isenha">Senha</label>
+                        <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
