--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <span class="material-icons md-18">person</span>
+                        <label for="ilogin"><span class="material-icons md-18">person</span></label>
                         <input type="email" name="login" id="ilogin" required placeholder="Seu e-mail" autocomplete="email">
-                        <label for="ilogin"></label>
                     </div>
                     <div class="campo">
-                        <span class="material-icons">&#xe0da;</span>
+                        <label for="isenha"><span class="material-icons">&#xe0da;</span></label>
                         <input type="password" name="senha" id="isenha" required min="5" placeholder="Sua senha">
-                        <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
