--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <label for="ilogin"><span class="material-icons md-18">person</span></label>
+                        <span class="material-icons md-18">person</span>
                         <input type="email" name="login" id="ilogin" required placeholder="Seu e-mail" autocomplete="email">
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <label for="isenha"><span class="material-icons">&#xe0da;</span></label>
+                        <span class="material-icons">&#xe0da;</span>
                         <input type="password" name="senha" id="isenha" required min="5" placeholder="Sua senha">
+                        <label for="isenha">senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
